--- a/Normal2.css
+++ b/Normal2.css
@@ -18,7 +18,7 @@
     width: 350px;
     height: 350px;
     border: none;
-    background-image: url('https://www.iphones.ru/wp-content/uploads/2024/06/IMG_4694-1.jpeg');
+    background-image: url('hamster.jpg');
     background-size: cover;
   }
 .nor2{
