--- a/Normal2.css
+++ b/Normal2.css
@@ -138,7 +138,9 @@ html{
     border: none;
     top: 17px;
     background-color: rgb(255, 255, 255);
-    color: rgb(0, 255, 0);
+    color: rgb(0, 0, 0);
+    border-color: rgb(0, 255, 0);
+    border-width: 5px;
 }
 .promo1{
     width: 400px;
