--- a/Normal2.css
+++ b/Normal2.css
@@ -1,33 +1,46 @@
+html{
+    background-image: url('https://neftegaz.ru/upload/iblock/a0a/lerze8laou62j116u5kqj6x01f8adqd7/Depositphotos_165380252_xl_2015.jpg');
+}
+.gera{
+    width: 775px;
+    height: 800px;
+}
+.mod1{
+}
+.mod2{
+    position: relative;
+    left: 375px;
+    bottom: 790px;
+}
 .nor1{
     font-size: 50px;
-    color: rgb(255, 255, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
     position: relative;
     left: 10px;
+    color: rgb(255, 123, 0);
+    -webkit-text-stroke: 2px #000000;
 }
 .nor5{
     font-size: 50px;
-    color: rgb(255, 255, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
     position: relative;
-    left: 75px;
+    left: 70px;
+    color: rgb(255, 123, 0);
+    -webkit-text-stroke: 2px #000000;
 }
-.image-button {
+.image-button{
     width: 350px;
     height: 350px;
     border: none;
     background-image: url('hamster.jpg');
     background-size: cover;
-  }
+    border: 5px solid rgb(249, 169, 64);
+}
 .nor2{
     font-size: 50px;
+    font-weight: bolder;
     color: rgb(255, 123, 0);
     -webkit-text-stroke: 2px #000000;
-    font-weight: bolder;
-    position: relative;
-    left: 60px;
 }
 .nor3{
     width: 350px;
@@ -35,132 +48,102 @@
     color: rgb(255, 255, 255);
     font-size: 50px;
     background: rgb(0, 120, 50);
+    font-weight: bolder;
 }
-html{
-    background-image: url('https://neftegaz.ru/upload/iblock/a0a/lerze8laou62j116u5kqj6x01f8adqd7/Depositphotos_165380252_xl_2015.jpg');
+.kill0{
+    size: 275px;
+    height: 75px;
+}
+.reg0{
+    width: 80px;
+    height: 80px;
+    font-size: 50px;
+    border-width: 5px;
+    position: relative;
+    top: 17px;
+    border-color: rgb(0, 255, 0);
+    border-width: 5px;
 }
 .not1{
     font-size: 50px;
-    color: rgb(255, 123, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
-    position: relative;
+    color: rgb(208, 0, 128);
+    -webkit-text-stroke: 2px #000000;
 }
 .not0{
     font-size: 50px;
-    color: rgb(255, 123, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
     position: relative;
-    left: 50px;
+    left: 75px;
+    color: rgb(208, 0, 128);
+    -webkit-text-stroke: 2px #000000;
 }
-.no4{
+.lo1{
+    width: 390px;
+    height: 75px;
     font-size: 50px;
-    color: rgb(0, 150, 255);
-    -webkit-text-stroke: 2px #000000;
-    font-weight: bolder;
-    position: relative;
-    left: 100px;
-}
-.no5{
-    font-size: 50px;
-    color: rgb(0, 150, 255);
-    -webkit-text-stroke: 2px #000000;
-    font-weight: bolder;
-    position: relative;
-    left: 50px;
+    background: chartreuse;
+    border: none;
 }
 .no1{
     font-size: 50px;
-    color: rgb(165, 255, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
-    position: relative;
-    left: 50px;
+    color: rgb(255, 123, 0);
+    -webkit-text-stroke: 2px #000000;
+}
+.lo2{
+    width: 390px;
+    height: 75px;
+    font-size: 50px;
+    background: rgb(255, 255, 0);
+    border: none;
 }
 .no2{
     font-size: 50px;
-    color: rgb(165, 255, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
-    position: relative;
-    left: 50px;
+    color: rgb(255, 123, 0);
+    -webkit-text-stroke: 2px #000000;
+}
+.lo3{
+    width: 390px;
+    height: 75px;
+    font-size: 50px;
+    background: rgb(255, 0, 0);
+    border: none;
 }
 .no3{
     font-size: 50px;
-    color: rgb(165, 255, 0);
-    -webkit-text-stroke: 2px #000000;
     font-weight: bolder;
+    color: rgb(255, 123, 0);
+    -webkit-text-stroke: 2px #000000;
+}
+.no4{
+    font-size: 50px;
+    font-weight: bolder;
+    color: rgb(0, 150, 255);
+    -webkit-text-stroke: 2px #000000;
+}
+.no5{
+    font-size: 50px;
+    font-weight: bolder;
+    color: rgb(0, 150, 255);
+    -webkit-text-stroke: 2px #000000;
+}
+.kill1{
+    size: 275px;
+    height: 75px;
     position: relative;
-    left: 50px;
-}
-.lo1{
-    width: 350px;
-    height: 75px;
-    color: rgb(0, 0, 0);
-    font-size: 50px;
-    background: chartreuse;
-}
-.lo2{
-    width: 350px;
-    height: 75px;
-    color: rgb(0, 0, 0);
-    font-size: 50px;
-    background: rgb(255, 255, 0); 
-}
-.lo3{
-    width: 350px;
-    height: 75px;
-    color: rgb(0, 0, 0);
-    font-size: 50px;
-    background: rgb(255, 0, 0);
-}
-.lol56{
-    position: relative;
-    left: 380px;
-    bottom: 680px;
+    bottom: 13px;
 }
 .re1{
     width: 80px;
     height: 80px;
     background-image: url('https://mywebicons.ru/i/png/1d7c3cc83fdaead5fdbea29f994ea4f6.png');
     background-size: cover;
-    position: relative;
     top: 30px;
-    border-color: rgb(0, 255, 0);
     border-width: 5px;
-}
-.reg0{
-    width: 80px;
-    height: 80px;
-    font-size: 50px;
     position: relative;
     top: 17px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
     border-color: rgb(0, 255, 0);
     border-width: 5px;
-}
-.promo1{
-    width: 400px;
-    position: relative;
-    bottom: 15px;
-}
-.promo2{
-    width: 400px;
-    position: relative;
-    bottom: 30px;
-}
-.kill0{
-    size: 275px;
-    height: 75px;
-}
-.kill1{
-    size: 200px;
-    height: 75px;
-}
-.jika{
-    display: flex;
-    position: relative;
-    bottom: 675px;
 }
